# OOP_labs

./: Allocator.hpp  CMakeLists.txt  Dragon.cpp  Dragon.hpp  Factory.hpp  NPC.cpp  NPC.hpp  Princess.cpp  Princess.hpp  README.md  WanderingKnight.cpp  WanderingKnight.hpp  change.cpp  change.h  main.cpp  test1.cpp  tests.cpp
include/: ArrFigure.h  Array.h  Figure.h  Figure.hpp  Five.h  Function.h  List.hpp  Pentagon.h  Pentagon.hpp  Point.h  Point.hpp  Rhomb.h  Rhombus.hpp  Trapezoid.h  Trapezoid.hpp  allocator.hpp  battle.h  battlefield.h  bull.h  declaration.h  dragon.h  factory.h  frog.h  npc.h  observer.h  queue.hpp
src/: ArrFigure.cpp  Figure.cpp  Five.cpp  Pentagon.cpp  Point.cpp  Rhomb.cpp  Trapezoid.cpp  battle.cpp  battlefield.cpp  bull.cpp  dragon.cpp  factory.cpp  fight.cpp  frog.cpp  npc.cpp  observerConsole.cpp  observerFile.cpp
test/: test.cpp  tests.cpp
